Fixed card alignment

--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,6 @@ header li a:hover{
 }
 .card img{
     height:27vh;
-    margin:auto;
 }
 
 
